--- a/arightbeholding.com/config/production/hugo.toml
+++ b/arightbeholding.com/config/production/hugo.toml
@@ -1,2 +1,3 @@
 # Overrides for production environment
-baseurl = "/"
+baseurl = "https://arightbeholding.github.io/arightbeholding.com"
+# baseurl = "arightbeholding.github.io"
