--- a/arightbeholding.com/config/production/hugo.toml
+++ b/arightbeholding.com/config/production/hugo.toml
@@ -1,3 +1,3 @@
 # Overrides for production environment
-baseurl = "https://arightbeholding.github.io/arightbeholding.com"
-# baseurl = "arightbeholding.github.io"
+# baseurl = "https://arightbeholding.github.io/arightbeholding.com"
+baseurl = "https://arightbeholding.github.io"
